--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "react": "^18.0.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.0.0",
     "react-easy-marquee": "^1.2.3",
     "react-router-dom": "^6.3.0",
